# Game-Of-Life

./: .gitignore  CMakeLists.txt  README.md
GameOfLife/: main.cpp
GameOfLife.xcodeproj/: project.pbxproj
GameOfLife.xcodeproj/xcshareddata/xcschemes/: GameOfLife.xcscheme
GameOfLife.xcodeproj/xcuserdata/thomas.xcuserdatad/xcschemes/: xcschememanagement.plist
includes/: AssetManager.hpp  Game.hpp  GameData.hpp  Grid.hpp  InputManager.hpp  LifeState.hpp  OpenGame.hpp  Vector2.hpp
src/: AssetManager.cpp  Game.cpp  InputManager.cpp  LifeState.cpp  main.cpp
